Closed Bug 1063511 Opened 10 years ago Closed 10 years ago

Fix mingw builds after bug 1027906.

Categories

(Core :: Security, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: jacek, Assigned: jacek)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
- codecvt is not supported by GCC
- #ifdef MOZ_SANDBOX code that needs it
- Call to HashString is ambiguous, because on mingw we use char16ptr_t, which has implicit cast operators to both const wchar_t* and const char16_t*
Attachment #8484941 - Flags: review?(tabraldes)
Comment on attachment 8484941 [details] [diff] [review]
patch

Review of attachment 8484941 [details] [diff] [review]:
-----------------------------------------------------------------

Sorry about the bustage!

> - Call to HashString is ambiguous, because on mingw we use char16ptr_t,
> which has implicit cast operators to both const wchar_t* and const char16_t*

bug 1027906 shouldn't have added that code, but let's fix it here anyway.
Attachment #8484941 - Flags: review?(tabraldes) → review+
https://hg.mozilla.org/mozilla-central/rev/71f28ed35eaa
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: