Bug 1063511 - Fix mingw builds after bug 1027906. r=tabraldes